2007-05-23  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/Makefile.am:
	* src/gstsphinxsink.c: (gst_sphinx_sink_ad_read),
	(gst_sphinx_sink_start), (gst_sphinx_sink_stop),
	(gst_sphinx_sink_render):
	* src/gstsphinxsink.h:
	
	Continuous listening implemented, the only thing
	is callbacks now.

2007-05-23  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/Makefile.am:
	* src/gstsphinxsink.c: (gst_sphinx_sink_render):
	
	Links with correct library - fixes the crash on stop.

2007-05-20  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* configure.ac:
	* src/Makefile.am:
	* src/action.c: (do_action):
	* src/action.h:
	* src/gstsphinxsink.c: (gst_sphinx_decoder_init),
	(gst_sphinx_sink_init_interfaces), (gst_sphinx_sink_base_init),
	(gst_sphinx_sink_class_init), (gst_sphinx_sink_init),
	(gst_sphinx_sink_set_property), (gst_sphinx_sink_get_property),
	(gst_sphinx_sink_prepare), (gst_sphinx_sink_unprepare),
	(gst_sphinx_sink_write):
	* src/gstsphinxsink.h:
	* src/voice-control.c: (control_stop), (main):
	
	Audiosink is inherited now, data goes to decoder but
	crashes it.

2007-05-20  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* configure.ac:
	* src/Makefile.am:
	* src/action.c: (do_action):
	* src/action.h:
	* src/gstsphinxsink.c: (gst_sphinx_decoder_init),
	(gst_sphinx_sink_init_interfaces), (gst_sphinx_sink_base_init),
	(gst_sphinx_sink_class_init), (gst_sphinx_sink_init),
	(gst_sphinx_sink_set_property), (gst_sphinx_sink_get_property),
	(gst_sphinx_sink_prepare), (gst_sphinx_sink_unprepare),
	(gst_sphinx_sink_write):
	* src/gstsphinxsink.h:
	* src/voice-control.c: (control_stop), (main):

2007-05-20  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* configure.ac:
	* data/GNOME_VoiceControlApplet.xml:
	* data/GNOME_VoiceControlApplet_Factory.server.in.in:
	* src/Makefile.am:
	* src/action.c: (do_action):
	* src/action.h:
	* src/gstsphinxsink.c: (gst_sphinx_sink_state_error_get_type),
	(gst_sphinx_sink_base_init), (gst_sphinx_sink_class_init),