@@ -2,9 +2,12 @@
 #define _ACTION_H_
 
 typedef enum {
-    ACTION_MINIMIZE_WINDOW,
-    ACTION_MAXIMIZE_WINDOW,
-    ACTION_CLOSE_WINDOW
+    ACTION_MINIMIZE_ACTIVE_WINDOW,
+    ACTION_MAXIMIZE_ACTIVE_WINDOW,
+    ACTION_UNMAXIMIZE_ACTIVE_WINDOW,
+    ACTION_FULLSCREEN_ACTIVE_WINDOW,
+    ACTION_UNFULLSCREEN_ACTIVE_WINDOW,
+    ACTION_CLOSE_ACTIVE_WINDOW
 } VoiceAction;
 
 void 
